--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <script type="text/javascript" src="assets/javascript/app.js"></script>
 
   <!--fonts-->
+  <link href='https://fonts.googleapis.com/css?family=Francois+One' rel='stylesheet' type='text/css'>
   
   </head>
   
